fix overflow

--- a/style/style.css
+++ b/style/style.css
@@ -1,105 +1,128 @@
-:root{
-
+:root {
   font-family: "Noto Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 300;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-    font-size: 20px;
-    --white: rgb(255, 253, 250);
-    --dark: rgb(22, 22, 22);
+  font-variation-settings: "wdth" 100;
+  font-size: 20px;
+  --white: rgb(255, 253, 250);
+  --dark: rgb(22, 22, 22);
 }
 
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.flex{
-    display:flex;
-    justify-content: center;
-    align-items: center;
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-html,body{
-    width: 100vw;
-    height:100vh;
-    color: var(--dark);
-    background-color: var(--white);
+html,
+body {
+  width: 100%;
+  height: 100vh;
+  color: var(--dark);
+  background-color: var(--white);
 }
 
-section{
-    width:100%;
-    max-height:100vh;
+section {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  max-height: 100vh;
 }
 
-.home{
-    width:100%;
-    height:100%;
-    flex-direction: column;
+.home {
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
 }
 
-.anime-path{
-    width: 100%;
-    max-height:100%;
-    position:absolute;
-    top:0;
-    left: 0;
-    z-index: 0;
-    overflow: hidden;
+.anime-path {
+  width: 100%;
+  max-height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  overflow: hidden;
 }
 
-.logo-container{
- z-index:15;
- color:white;
- position:absolute;
- top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-text-align: center;
- display:grid;
- grid-template-rows:5rem 50px;
- grid-template-columns: auto;
+.logo-container {
+  z-index: 15;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  display: grid;
+  grid-template-rows: 5rem 50px;
+  grid-template-columns: auto;
 }
 
-.logo-container h1{
-    font-size:5rem;
+.logo-container h1 {
+  font-size: 5rem;
 }
 
-
-
-
-.video-home{
-    z-index:1;
-    width:100%;
-    height:100%;
-    display:flex;
+.video-home {
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  display: flex;
 }
 
-video{
-    width:100%;
-    height: 100%;
-    object-fit: cover;
+video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .loader {
   width: 45px;
   aspect-ratio: 1;
   --c: no-repeat linear-gradient(#000 0 0);
-  background: 
-    var(--c) 0%   50%,
-    var(--c) 50%  50%,
+  background:
+    var(--c) 0% 50%,
+    var(--c) 50% 50%,
     var(--c) 100% 50%;
   background-size: 20% 100%;
   animation: l1 1s infinite linear;
 }
 @keyframes l1 {
-  0%  {background-size: 20% 100%,20% 100%,20% 100%}
-  33% {background-size: 20% 10% ,20% 100%,20% 100%}
-  50% {background-size: 20% 100%,20% 10% ,20% 100%}
-  66% {background-size: 20% 100%,20% 100%,20% 10% }
-  100%{background-size: 20% 100%,20% 100%,20% 100%}
+  0% {
+    background-size:
+      20% 100%,
+      20% 100%,
+      20% 100%;
+  }
+  33% {
+    background-size:
+      20% 10%,
+      20% 100%,
+      20% 100%;
+  }
+  50% {
+    background-size:
+      20% 100%,
+      20% 10%,
+      20% 100%;
+  }
+  66% {
+    background-size:
+      20% 100%,
+      20% 100%,
+      20% 10%;
+  }
+  100% {
+    background-size:
+      20% 100%,
+      20% 100%,
+      20% 100%;
+  }
 }
-
